# MultithreadDownloader

./: .gitignore  README.md  pyproject.toml
MultithreadDownloader/: DaemonThread.py  DownloadManager.py  DownloadThread.py
MultithreadDownloader/download/: DownloadManager.py  DownloadThread.py
MultithreadDownloader/src/: DownloadManager.py
MultithreadDownloader/threads/: DownloadThread.py
MultithreadDownloader/utils/: config.py  logger.py  system_directorys.py
